# wildebeest

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  requirements-dev.in  requirements-dev.txt  requirements-read-the-docs.txt  requirements.txt  setup.cfg  setup.py
.ci/: test.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_report.md
.github/workflows/: compliance-oss.yaml  pr.yaml  prod.yaml
creevey/: __init__.py  _version.py  constants.py  dataset.py  datasets.py  download.py  model_selection.py  resize.py  symlink.py
creevey/load_funcs/: __init__.py  image.py  load_funcs.py
creevey/ops/: __init__.py  download.py  image.py  record.py
creevey/ops/helpers/: __init__.py  report.py
creevey/path_funcs/: __init__.py  path_funcs.py
creevey/pipelines/: __init__.py  core.py  image.py  pipelines.py
creevey/util/: __init__.py  image.py  util.py
creevey/write_funcs/: __init__.py  image.py
docs/: api.rst  conduct.rst  conf.py  contents.rst  contrib.rst  index.rst  limitations.rst  modules.rst  quickstart.md  quickstart.rst  structure.rst
docs/source/: conf.py  contrib.rst  index.rst
experiments/image_io_timing_experiments/: image_io_timing_experiments.ipynb
scratch/: reproduce_error.ipynb  url.csv
tests/: __init__.py  conftest.py  test_dataset.py  test_download.py  test_image_pipelines.py  test_model_selection.py  test_resize.py  test_symlink.py  tmp.py
tests/fixtures/: __init__.py  image.py  misc.py
tests/load_funcs/: test_load_funcs_image.py
tests/pipelines/: test_image.py
tests/sample_data/: Hiking-Thumb.jp2
tests/test_load_funcs/: test_load_funcs_image.py
tests/test_ops/: test_ops_image.py  test_report.py
tests/test_path_funcs/: test_path_funcs.py
tests/test_pipelines/: test_pipelines.py  test_pipelines_core.py  test_pipelines_image.py
tests/test_util/: test_util.py  test_util_image.py
wildebeest/path_funcs/: __init__.py
wildebeest/pipelines/: __init__.py  image.py  pipelines.py
wildebeest/util/: image.py  util.py
wildebeest/write_funcs/: image.py
(+12 files in other folders)
