[metadata]
description-file = README.md

[flake8]
max-line-length = 110
application-import-names = creevey, tests
import-order-style = appnexus
exclude =
    tests/conftest.py,
    tests/__init__.py,
    creevey/__init__.py,
    setup.py
ignore =
    # https://pep257.readthedocs.io/en/latest/error_codes.html
    # Missing docstrings in certain cases
    D100
    D103
    D104
    D107

    # 1 blank line required between summary line and description
    D204
    D205

    # First line should not end with a period.
    D400

    # Missing blank line after last section
    D413

    # Missing whitespace around arithmetic operator
    E226
