[metadata]
description-file = README.md

[flake8]
max-line-length = 110
application-import-names = creevey, tests
import-order-style = appnexus
exclude =
    tests/conftest.py,
    **/__init__.py,
    setup.py
ignore =
    # https://pep257.readthedocs.io/en/latest/error_codes.html
    # Missing module docstrings
    D100

    # 1 blank line required between summary line and description
    D204
    D205

    # First line should not end with a period.
    D400

    # Missing blank line after last section
    D413

    # Missing whitespace around arithmetic operator
    E226

    # Whitespace before ':' (not PEP 8 compliant)
    E203
per-file-ignores =
    # not requiring docstrings for tests
    tests/*: D101, D102, D103
